# RetroQUEST

./: .gitignore  .gitmodules  .sconsign.dblite  Dockerfile  Makefile  README.md  SConstruct  build_gdlibretro.sh  build_libretro_binding.sh  icon.svg.import  main.gd  main.gd.uid  main.tscn  openxr_action_map.tres  project.godot  prompt.md  prompt.sh  xr_origin_3d.tscn
.github/ISSUE_TEMPLATE/: feature--developers-.md
.github/workflows/: cd.yml  ci.yml
addons/: LibRetroHost.gdextension  LibRetroHost.gdextension.uid
addons/gdretroplay/: CMakeLists.txt  build_linux.sh  gdretroplay.gdextension
addons/gdretroplay/src/: emulator_core.cpp  emulator_core.h
addons/godot-xr-tools/: plugin.gd.uid  xr_tools.gd.uid
addons/xr-simulator/: XRSimulator.gd.uid  XRSimulator.tscn
assets/: Brick Wall Texture.jpg.import
assets/consoles/: sega_genesis_model_2__sega_mega_drive.glb.import  sega_genesis_model_2__sega_mega_drive_0.png.import  sega_genesis_model_2__sega_mega_drive_1.png.import  sega_genesis_model_2__sega_mega_drive_10.png.import  sega_genesis_model_2__sega_mega_drive_11.png.import  sega_genesis_model_2__sega_mega_drive_12.png.import  sega_genesis_model_2__sega_mega_drive_13.png.import  sega_genesis_model_2__sega_mega_drive_14.png.import  sega_genesis_model_2__sega_mega_drive_2.png.import  sega_genesis_model_2__sega_mega_drive_3.png.import  sega_genesis_model_2__sega_mega_drive_4.png.import  sega_genesis_model_2__sega_mega_drive_5.png.import  sega_genesis_model_2__sega_mega_drive_6.png.import  sega_genesis_model_2__sega_mega_drive_7.png.import  sega_genesis_model_2__sega_mega_drive_8.png.import  sega_genesis_model_2__sega_mega_drive_9.png.import
assets/kenney_furniture-kit/: Preview.png.import  (+1 more)
functions/: run_core.gd  run_core.gd.uid
gdlibretro/: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
gdlibretro/src/: CMakeLists.txt  CoreEnvironment.cpp  Input.cpp  Makefile  RegisterExtension.cpp  RetroHost.cpp  RetroHost.hpp  Video.cpp  cmake_install.cmake
libretro_binding/: SCsub  libretro_binding.cpp  libretro_binding.gdextension  libretro_binding.h  register_types.cpp
scripts/: emulate.gd  emulate.gd.old  libretro_loader.gd  libretro_loader.gd.uid
(+2137 files in other folders)
